# compose2containerapps

./: .env  .gitignore  Cargo.toml  README.md  backend-hollan.yml  db-containerapps.yml  db-multiple-aca.yml  frontend-hollan.yml  ghost-containerapps.yml  ghost-multiple-aca.yml  ghost-multiple-ports-aca.yml  justfile
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  release.yml
src/: cli.rs  compose.rs  containerapps.rs  convert.rs  main.rs
src/azure/: az_cli.rs  find_command.rs  mod.rs
src/commands/: convert_compose.rs  deploy_azure.rs  mod.rs  retrieve_logs.rs  validate_azure.rs
src/compose/: mod.rs
src/containerapps/: mod.rs  properties.rs
src/containerapps/configuration/: container_registry.rs  ingress.rs  (+5 more)
src/convert/: convert_to_containerapps.rs  get_configuration_from_compose.rs  get_configuration_from_service.rs  get_container_from_service.rs  get_containers_from_compose.rs  get_ingress_from_compose.rs  get_ingress_from_service.rs  get_properties.rs  get_properties_from_service.rs  get_public_services_from_compose.rs  get_secrets_from_compose.rs  get_secrets_from_service.rs  get_template_from_compose.rs  get_template_from_service.rs  mod.rs
src/support/: main.bicep  main.json
test/: containerapps-converted.yml  containerapps.yml  docker-compose.yml  environment.ps1  jeff-hollan-compose.yml
test/default_convert/: convert.env
test/jeff_hollan_sample/: convert.env  deploy.env  docker-compose.yml
test/multiple_service_convert/: .env  docker-compose.yml
test/multiple_services_and_ports_convert/: docker-compose.yml
(+7 files in other folders)
