[package]
name = "compose2containerapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
anyhow = "*"
clap = "*"
compose_yml = { git = "https://github.com/smurawski/compose_yml", branch = "v3" }
console = "*"
dialoguer = { version = "*", features = ["fuzzy-select"] }