[package]
name = "compose2containerapp"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8.21"
serde_json="1.0.72"
anyhow = "1.0.51"
clap = "2.34.0"
compose_yml = { git = "https://github.com/smurawski/compose_yml", branch = "v3" }
console = "0.15.0"
dialoguer = { version = "0.9.0", features = ["fuzzy-select"] }
log = "0.4.14"
env_logger = "0.9.0"
lazy_static = "1.4.0"
os_pipe = "1.0.0"
duct = "0.13.5"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
regex = "1"
custom_error = "1"